[package]
name = "sbt-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sbt"
path = "src/main.rs"

[dependencies]
sbt-types = { path = "../sbt-types" }
sbt-core = { path = "../sbt-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }

# Networking
tonic = { workspace = true, features = ["tls", "tls-roots"] }
prost = { workspace = true }

# TLS
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = { workspace = true }
anyhow = "1.0"
hex = { workspace = true }

# Storage
sled = "0.34"

# Retry jitter
rand = { workspace = true }

[dev-dependencies]
tempfile = "3.25"
criterion = { workspace = true }
sbt-notary = { path = "../sbt-notary", features = ["test-util"] }

[[bench]]
name = "throughput"
harness = false

[build-dependencies]
tonic-build = "0.12"
